# SmartEM

./: .gitattributes  .gitignore  LICENSE  README.md  _pyproject.toml  default_params.json  install.txt  pyproject.toml  run.py  scratch.ipynb  setup.py  smart_em_script.py
.github/workflows/: python-app.yml
examples/: connect_microscopy.py  default_imaging_params.json  default_imaging_params_pres.json  default_imaging_params_short.json  default_imaging_params_single.json  default_smartem_params.json  default_smartem_params_pres.json  nonwafer_imaging_params_1.json  nonwafer_imaging_params_multi.json  plot_example.py  smart_em_interactive.ipynb  smart_em_script.py  smart_em_script2.py  w03_imaging_params_2.json  w03_imaging_params_3.json  w03_imaging_params_5.json  w03_imaging_params_single.json
examples/tests/: test_smart_em_script.py
experiments/: Benchmark_different_dilation_time.ipynb  benchmark_dilation.py  compare_hybridGT_segmentation.ipynb  unet-fov.ipynb
experiments/parallelization/: timing.ipynb  timing_verios.py
pretrained_models/: em2mb_best.pth  em2mb_best_core.pth  error_best.pth  error_best_core.pth
smartem/: smartem.py  smartem_par.py  smartem_par2_q.py  smartem_par_2client.py  smartem_par_q.py  timing.py  tools.py
smartem/online/: get_rescan_maps.py  microscope.py
smartem/segmentation/: Clahe_experiments.ipynb  UNet.py  check_eMap_generation.ipynb  check_utility_of_getEmap.ipynb  em2mb-validation.ipynb  errnet_example.ipynb  evaluate-smartem.ipynb  exclusion_area_per_section.pkl  figure_generator.ipynb  loading-timing.ipynb  scratch.ipynb  segmentation-algo-comparison.ipynb  segmenter.py  segmenter_example.ipynb  smartem-validation.ipynb  test_segmenter.ipynb  utils.py
src/: smartem.py  tools.py
tests/: installation_test.py
(+34 files in other folders)
