[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartem"
version = "0.1.0"
description = "SmartEM: Machine Learning Guided Electron Microscopy Acquisition for Faster Connectomics"
readme = "README.md"
authors = [{ name = "Core Francisco Park", email = "corefranciscopark@g.harvard.edu" }]
license = { file = "LICENSE" }  # If you have a LICENSE file, include this line
urls = { "Homepage" = "https://github.com/cfpark00/SmartEM" }
requires-python = ">3.7.0"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "opencv-python==4.8.0.76",
    "pillow==9.3.0",
    "scikit-image",
    "h5py",
    "tqdm==4.66.1",
    "connectomics",
    "torch"
]

[tool.setuptools]
packages = ["smartem","smartem.online","smartem.offline"]
